--- a/public/items/conflict/un-lighter.html
+++ b/public/items/conflict/un-lighter.html
@@ -52,7 +52,7 @@
 			</div>
 
 			<div>
-				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="mine-marker-sarajevo.html">Last Item</a></p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="john-burns-card.html">Last Item</a></p>
 			</div>
 
 			<div class="item-pages">
