--- a/public/items/politics/1964-repubilcan-convention-pennant.html
+++ b/public/items/politics/1964-repubilcan-convention-pennant.html
@@ -52,7 +52,7 @@
 			</div>
 
 			<div>
-				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="1960-democratic-national-convention-tickets.html">Last Item</a></p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="1960-democratic-national-convention-tickets.html">Last Item</a> . . . <a href="four-presidents.html"> Next Item</a></p>
 			</div>
 
 			<div class="item-pages">
