--- a/public/items/politics/clinton-press-credential-iowa-announcement-2007.html
+++ b/public/items/politics/clinton-press-credential-iowa-announcement-2007.html
@@ -52,7 +52,7 @@
 			</div>
 
 			<div>
-				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="obama-biden-skunk-shirt.html">Last Item</a></p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="srlc-2010-book.html">Last Item</a></p>
 			</div>
 
 			<div class="item-pages">
