--- a/public/items/politics/dole-kemp-frank-sesno-shirt.html
+++ b/public/items/politics/dole-kemp-frank-sesno-shirt.html
@@ -52,7 +52,7 @@
 			</div>
 
 			<div>
-				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="bob-dole-letter.html">Last Item</a> . . . <a href="bauer-nelson-bumper-stickers.html"> Next Item</a></p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="hillary-clinton-signed-photo.html">Last Item</a> . . . <a href="republican-national-convention-1996-passes.html"> Next Item</a></p>
 			</div>
 
 			<div class="item-pages">
