--- a/public/items/politics/kerry-edwards-book.html
+++ b/public/items/politics/kerry-edwards-book.html
@@ -52,7 +52,7 @@
 			</div>
 
 			<div>
-				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="bushed-2004-shirt.html">Last Item</a> . . . <a href="kerry-bumper-stickers.html"> Next Item</a></p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="cnn-2002-election-guide.html">Last Item</a> . . . <a href="kerry-bumper-stickers.html"> Next Item</a></p>
 			</div>
 
 			<div class="item-pages">
