--- a/public/items/politics/presidential-champagne-bush.html
+++ b/public/items/politics/presidential-champagne-bush.html
@@ -52,7 +52,7 @@
 			</div>
 
 			<div>
-				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="air-force-one-tape-ball.html">Last Item</a> . . . <a href="2000-campaign-new-hampshire-bumper-sticker.html"> Next Item</a></p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="air-force-one-tape-ball.html">Last Item</a> . . . <a href="af-2-matches-gore.html"> Next Item</a></p>
 			</div>
 
 			<div class="item-pages">
