--- a/public/items/politics/west-palm-beach-test-ballot.html
+++ b/public/items/politics/west-palm-beach-test-ballot.html
@@ -52,7 +52,7 @@
 			</div>
 
 			<div>
-				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="florida-counties.html">Last Item</a> . . . <a href="air-force-one-bush-m&ms.html"> Next Item</a></p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="florida-counties.html">Last Item</a> . . . <a href="west-palm-beach-sample-ballot-2000.html"> Next Item</a></p>
 			</div>
 
 			<div class="item-pages">
