--- a/public/memorabilia-conflict-balkans.html
+++ b/public/memorabilia-conflict-balkans.html
@@ -107,7 +107,7 @@
 						<a href="items/conflict/shattered-glass.html"><img src="items/conflict/shattered-glass.jpeg"></a>
 					</div>
 				
-					<div class="item-label">Bullet-Resistant Glass</div>
+					<div class="item-label">Bullet-Resistant Armored Car Glass</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -115,7 +115,7 @@
 						<a href="items/conflict/sniper-sign.html"><img src="items/conflict/sniper-sign.jpeg"></a>
 					</div>
 
-					<div class="item-label">"Take Care" Sniper Sign</div>
+					<div class="item-label">"Take Care" Sniper Signs</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -307,6 +307,14 @@
 					</div>
 
 					<div class="item-label">Sarajevo Land Mine Marker</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/conflict/john-burns-card.html"><img src="items/conflict/john-burns-card.jpeg"></a>
+					</div>
+	
+					<div class="item-label">John Burns Business Card</div>
 				</div>
 
 				<div class="gallery-layout">
