--- a/public/memorabilia-politics-bush-part-2.html
+++ b/public/memorabilia-politics-bush-part-2.html
@@ -124,6 +124,14 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
+						<a href="items/politics/west-palm-beach-sample-ballot-2000.html"><img src="items/politics/west-palm-beach-sample-ballot-2000.jpeg"></a>
+					</div>
+		
+					<div class="item-label">2000 West Palm Beach Sample Ballot</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
 						<a href="items/politics/air-force-one-bush-m&ms.html"><img src="items/politics/air-force-one-bush-m&ms.jpeg"></a>
 					</div>
 
@@ -148,6 +156,22 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
+						<a href="items/politics/af-2-matches-gore.html"><img src="items/politics/af-2-matches-gore.jpeg"></a>
+					</div>
+	
+					<div class="item-label">Al Gore Air Force 2 Matchbook</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/politics/white-house-menu.html"><img src="items/politics/white-house-menu.jpeg"></a>
+					</div>
+		
+					<div class="item-label">White House Menu</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
 						<a href="items/politics/2000-campaign-new-hampshire-bumper-sticker.html"><img src="items/politics/2000-campaign-new-hampshire-bumper-sticker.jpeg"></a>
 					</div>
 
@@ -167,7 +191,7 @@
 						<a href="items/politics/bush-apec-script-john-king.html"><img src="items/politics/bush-apec-script-john-king.jpeg"></a>
 					</div>
 						
-					<div class="item-label">John King Bush Trip Script</div>
+					<div class="item-label">Signed John King Bush Trip Script</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -328,6 +352,14 @@
 					</div>
 
 					<div class="item-label">2004 Campaign Bushed Shirt</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/politics/cnn-2002-election-guide.html"><img src="items/politics/cnn-2002-election-guide.jpeg"></a>
+					</div>
+
+					<div class="item-label">CNN 2002 Election Guide</div>
 				</div>
 
 				<div class="gallery-layout">
