--- a/public/memorabilia-politics-clinton.html
+++ b/public/memorabilia-politics-clinton.html
@@ -125,7 +125,15 @@
 						<a href="items/politics/bob-dole-letter.html"><img src="items/politics/bob-dole-letter.jpeg"></a>
 					</div>
 
-					<div class="item-label">Bob Dole Letter to the Press</div>
+					<div class="item-label">Bob Dole Signed Letter to the Press</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/politics/hillary-clinton-signed-photo.html"><img src="items/politics/hillary-clinton-signed-photo.jpeg"></a>
+					</div>
+	
+					<div class="item-label">Hillary Clinton Signed Photo</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -134,6 +142,14 @@
 					</div>
 	
 					<div class="item-label">Dole-Kemp Frank Sesno Signed Shirt</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/politics/republican-national-convention-1996-passes.html"><img src="items/politics/republican-national-convention-1996-passes.jpeg"></a>
+					</div>
+		
+					<div class="item-label">1996 Republican Convention Passes</div>
 				</div>
 
 				<div class="gallery-layout">
@@ -227,10 +243,10 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="items/politics/dole-"><img src="items/politics/dole-passes.jpeg"></a>
+						<a href="items/politics/dole-passes.html"><img src="items/politics/dole-passes.jpeg"></a>
 					</div>
 			
-					<div class="item-label">Dole P</div>
+					<div class="item-label">Dole Campaign Passes</div>
 				</div>
 			</div>
 		</div>
