--- a/public/memorabilia-politics-obama.html
+++ b/public/memorabilia-politics-obama.html
@@ -361,6 +361,14 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
+						<a href="items/politics/dem-convention-guide-2008.html"><img src="items/politics/dem-convention-guide-2008.jpeg"></a>
+					</div>
+
+					<div class="item-label">2008 Democratic Convention Guide</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
 						<a href="items/politics/2008-republican-national-convention-coverage-guide.html"><img src="items/politics/2008-republican-national-convention-coverage-guide.jpeg"></a>
 					</div>
 
@@ -405,6 +413,30 @@
 					</div>
 			
 					<div class="item-label">Obama-Biden Skunk T-Shirt</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/politics/cnn-debate-notebooks-2012.html"><img src="items/politics/cnn-debate-notebooks-2012.jpeg"></a>
+					</div>
+			
+					<div class="item-label">CNN 2012 Debate Notebooks</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/politics/obama-inauguration-check-in.html"><img src="items/politics/obama-inauguration-check-in.jpeg"></a>
+					</div>
+			
+					<div class="item-label">Obama Inauguration Press Check In Sign</div>
+				</div>
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/politics/srlc-2010-book.html"><img src="items/politics/srlc-2010-book.jpeg"></a>
+					</div>
+				
+					<div class="item-label">SRLC 2010 Booklet</div>
 				</div>
 
 				<div class="gallery-layout">
