--- a/public/memorabilia-politics-pre-1976.html
+++ b/public/memorabilia-politics-pre-1976.html
@@ -129,6 +129,14 @@
 
 					<div class="item-label">1964 Republican Convention Pennant</div>
 				</div>	
+
+				<div class="gallery-layout">
+					<div class="gallery-item">
+						<a href="items/politics/four-presidents.html"><img src="items/politics/four-presidents.jpeg"></a>
+					</div>
+
+					<div class="item-label">Four Presidents Signed Photo</div>
+				</div>	
 			</div>
 		</div>	
 		
