--- a/public/memorabilia-politics-reagan.html
+++ b/public/memorabilia-politics-reagan.html
@@ -103,18 +103,10 @@
 
 				<div class="gallery-layout">
 					<div class="gallery-item">
-						<a href="items/politics/presidential-trip-bumper-sticker-one.html"><img src="items/politics/presidential-trip-bumper-sticker-one.jpeg"></a>
+						<a href="items/politics/presidential-trip-bumper-stickers.html"><img src="items/politics/presidential-trip-bumper-stickers.jpeg"></a>
 					</div>
 
-					<div class="item-label">Reagan Presidential Trip Sticker #1</div>
-				</div>
-
-				<div class="gallery-layout">
-					<div class="gallery-item">
-						<a href="items/politics/presidential-trip-bumper-sticker-two.html"><img src="items/politics/presidential-trip-bumper-sticker-two.jpeg"></a>
-					</div>
-
-					<div class="item-label">Reagan Presidential Trip Sticker #2</div>
+					<div class="item-label">Reagan Presidential Trip Stickers</div>
 				</div>
 
 				<div class="gallery-layout">
