--- a/public/newsgatheringtools.html
+++ b/public/newsgatheringtools.html
@@ -54,7 +54,7 @@
 			
 			<div class="row">
 				<div class="col-med equipment-label-box">
-					<a href="equipment/cameras.html"><img class="equipment-category" src="images/Galleries/set-camera.jpeg"></a>
+					<a href="equipment/camers/cameras.html"><img class="equipment-category" src="images/Galleries/set-camera.jpeg"></a>
 					
 					<p class="equipment-label">Cameras</p>
 				</div>
@@ -74,7 +74,7 @@
 				</div>
 
 				<div class="col-med equipment-label-box">
-					<a href="equipment/other-equipment.html"><img class="equipment-category" src="images/Galleries/van.jpeg"></a>
+					<a href="equipment/other-equipment/other-equipment.html"><img class="equipment-category" src="images/Galleries/van.jpeg"></a>
 
 					<p class="equipment-label">Other</p>
 				</div>
