--- a/public/items/conflict/mine-marker-sarajevo.html
+++ b/public/items/conflict/mine-marker-sarajevo.html
@@ -52,7 +52,7 @@
 			</div>
 
 			<div>
-				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="maybe-airlines-stamps.html">Last Item</a> . . . <a href="un-lighter.html"> Next Item</a></p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="maybe-airlines-stamps.html">Last Item</a> . . . <a href="john-burns-card.html"> Next Item</a></p>
 			</div>
 
 			<div class="item-pages">
