--- a/public/items/miscellaneous/cnn-washington-dc-1982.html
+++ b/public/items/miscellaneous/cnn-washington-dc-1982.html
@@ -52,8 +52,8 @@
 			</div>
 
 			<div>
-                <p class="next-item"><span class="red">Scroll&colon;</span> <a href="emmy-awards-ticket.html">Last Item</a></p>
-            </div>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="emmy-awards-ticket.html">Last Item</a> . . . <a href="cnn-ad.html"> Next Item</a></p>
+			</div>
 
 			<div class="item-pages">
 				<h2>1982 CNN Washington Display</h2>
