--- a/public/items/politics/2000-campaign-new-hampshire-bumper-sticker.html
+++ b/public/items/politics/2000-campaign-new-hampshire-bumper-sticker.html
@@ -52,7 +52,7 @@
 			</div>
 
 			<div>
-				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="presidential-champagne-bush.html">Last Item</a> . . . <a href="bush-airplane-napkins.html"> Next Item</a></p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="white-house-menu.html">Last Item</a> . . . <a href="bush-airplane-napkins.html"> Next Item</a></p>
 			</div>
 
 			<div class="item-pages">
