--- a/public/items/politics/2008-republican-national-convention-coverage-guide.html
+++ b/public/items/politics/2008-republican-national-convention-coverage-guide.html
@@ -52,7 +52,7 @@
 			</div>
 
 			<div>
-				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="mccain-meeting-poster.html">Last Item</a> . . . <a href="mccain-palin-shirt.html"> Next Item</a></p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="dem-convention-guide-2008.html">Last Item</a> . . . <a href="mccain-palin-shirt.html"> Next Item</a></p>
 			</div>
 
 			<div class="item-pages">
