--- a/public/items/politics/bushed-2004-shirt.html
+++ b/public/items/politics/bushed-2004-shirt.html
@@ -52,7 +52,7 @@
 			</div>
 
 			<div>
-				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="2000-iowa-caucus.html">Last Item</a> . . . <a href="kerry-edwards-book.html"> Next Item</a></p>
+				<p class="next-item"><span class="red">Scroll&colon;</span> <a href="2000-iowa-caucus.html">Last Item</a> . . . <a href="cnn-2002-election-guide.html"> Next Item</a></p>
 			</div>
 
 			<div class="item-pages">
