--- a/public/equipment/other-equipment/other-equipment.html
+++ b/public/equipment/other-equipment/other-equipment.html
@@ -60,15 +60,15 @@
 				</div>
 
 				<div class="col-med equipment-gallery">
-					<img src="">
+					<img src="video-phone.jpeg">
 
-					<p></p>
+					<p>Video Phone</p>
 				</div>
 
 				<div class="col-med equipment-gallery">
-					<img src="">
+					<img src="prospect.jpeg">
 
-					<p></p>
+					<p>Prospect Device</p>
 				</div>
 			</div>
 		</div>	
