--- a/public/newsgatheringtools.html
+++ b/public/newsgatheringtools.html
@@ -60,7 +60,7 @@
 				</div>
 
 				<div class="col-med equipment-label-box">
-					<a href="equipment/lighting.html"><img class="equipment-category" src="images/Galleries/piers-morgan-set.jpeg"></a>
+					<a href="equipment/lighting/lighting.html"><img class="equipment-category" src="images/Galleries/piers-morgan-set.jpeg"></a>
 
 					<p class="equipment-label">Lights</p>
 				</div>
@@ -68,7 +68,7 @@
 
 			<div class="row">
 				<div class="col-med equipment-label-box">
-					<a href="equipment/decks.html"><img class="equipment-category" src="images/Galleries/cnn-edit-bay-la-1992.jpeg"></a>
+					<a href="equipment/decks/decks.html"><img class="equipment-category" src="images/Galleries/cnn-edit-bay-la-1992.jpeg"></a>
 
 					<p class="equipment-label">Decks</p>
 				</div>
